# unittest_enhancement

./: CMakeLists.txt  LICENSE  README.md  generate_coverage.sh  sample_exception_test.cpp
include/: unittest_enhanced.cpp  unittest_enhanced.h
include/mock/: unittest_enhanced_mock.h
src/: sample_exception.cpp
test/: sample_exception.cpp
